--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "firebase": "^11.10.0",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.48.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3"
   },
