--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "firebase": "^11.10.0",
     "react": "^18.2.0",
     "react-d3-tree": "^3.6.6",
